[package]
name = "chifre"
version = "0.2.0"
edition = "2021"
description = "Lexer for Vaca"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.6"
pest_derive = "2.7.6"
vaca-core = {path = "../vaca-core"}

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
