[package]
name = "pasto"
version = "0.1.0"
edition = "2021"
description = "Parser for Vaca, generates an AST-like structure from Chifre lexer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.6"
pest_derive = "2.7.6"
vaca-core = {path = "../vaca-core"}
chifre ={ path = "../chifre"}
rustc-hash = "1.1.0"
