[package]
name = "vaca-repl"
version = "0.2.2"
edition = "2021"
description = "Vaca language REPL environment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envconfig = "0.10.0"
rustyline = { version = "13.0.0", features = ["derive"] }
vaca-core ={ path = "../vaca-core" }
vaca-stl = { path = "../vaca-stl" }
vaca-build ={ path = "../vaca-build" }