[package]
name = "vaca-vm"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy = "0.8.7"
vaca-core = { path = "../vaca-core" }
vaca-build = { path = "../vaca-build" }
vaca-stl = {path = "../vaca-stl"}
