[package]
name = "vaca"
version = "0.3.0"
edition = "2021"
description = "Vaca programming language interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
envconfig = "0.10.0"
homedir = "0.2.1"
pest = "2.7.6"
pest_derive = "2.7.6"
rustyline = { version = "13.0.0", features = ["derive"] }
speedy = "0.8.7"
vaca-core ={ path = "../vaca-core"}