[package]
name = "vaca"
version = "0.5.5"
edition = "2021"
description = "Vaca programming language interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
homedir = "0.2.1"
envconfig = "0.10.0"

vaca-core ={ path = "../vaca-core" }
vaca-repl ={ path = "../vaca-repl"}
vaca-build ={ path = "../vaca-build" }
vaca-vm ={ path = "../vaca-vm"}
